--- a/website/content/assignment/11-lab.Rmd
+++ b/website/content/assignment/11-lab.Rmd
@@ -4,6 +4,7 @@ output: html_document
 link-citations: yes
 editor_options: 
   chunk_output_type: console
+always_allow_html: true
 ---
 
 
@@ -13,18 +14,21 @@ library(data.table)
 library(tidyverse)
 library(dplyr)
 library(plotly)
-library(DT)
 library(knitr)
+library(widgetframe)
 
 opts_chunk$set(
   warning = FALSE,
   message = FALSE,
-  eval=TRUE,
+  eval=FALSE,
   echo = TRUE,
+  cache=FALSE,
+  include=TRUE,
   fig.width = 7, 
   fig.align = 'center',
   fig.asp = 0.618,
   out.width = "700px")
+
 
 ```
 
@@ -34,11 +38,12 @@ opts_chunk$set(
 - Create interactive graphs of different types using `plot_ly()` and `ggplotly()` functions
 - Customize the hoverinfo and other plot features
 - Create a Choropleth map using `plot_geo()`
-- Create an interactive table using `DataTable`
 
 # Lab Description
 
-We will work with the COVID data presented in lecture. Recall the dataset consists of COVID-19 cases and deaths in each US state during the course of the COVID epidemic. We will explore cases, deaths, and their population normalized values over time to identify trends.
+We will work with COVID data downloaded from the New York Times. The dataset consists of COVID-19 cases and deaths in each US state during the course of the COVID epidemic.
+
+**The objective of this lab is to explore relationships between cases, deaths, and population sizes of US states, and plot data to demonstrate this**
 
 # Steps
 
@@ -47,7 +52,7 @@ We will work with the COVID data presented in lecture. Recall the dataset consis
 ### 1. Read in the data
 
 - Read in the COVID data with data.table:fread() from the NYT GitHub repository: "https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-states.csv"
-- Read in the state population data with data.table:fread() from the repository: "https://raw.githubusercontent.com/COVID19Tracking/associated-data/master/us_census_data/us_census_2018_population_estimates_states.csv"
+- Read in the state population data with data.table:fread() from the repository: "https://raw.githubusercontent.com/COVID19Tracking/associated-data/master/us_census_data/us_census_2018_population_estimates_states.csv""
 - Merge datasets
 
 ```{r, echo=TRUE, message=FALSE}
@@ -58,21 +63,19 @@ We will work with the COVID data presented in lecture. Recall the dataset consis
 ## state-level population information from us_census_data available on GitHub repository:
 # https://github.com/COVID19Tracking/associated-data/tree/master/us_census_data
 
+### FINISH THE CODE HERE ###
 # load COVID state-level data from NYT
-### FINISH THE CODE HERE ###
-cv_states_readin <- as.data.frame(data.table::fread("https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-states.csv") )
+cv_states <- as.data.frame(______________("https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-states.csv"))
 
+### FINISH THE CODE HERE ###
 # load state population data
-### FINISH THE CODE HERE ###
-state_pops_readin <- as.data.frame(data.table::fread("https://raw.githubusercontent.com/COVID19Tracking/associated-data/master/us_census_data/us_census_2018_population_estimates_states.csv"))
-
-state_pops <- state_pops_readin
+state_pops <- as.data.frame(_____________("https://raw.githubusercontent.com/COVID19Tracking/associated-data/master/us_census_data/us_census_2018_population_estimates_states.csv"))
 state_pops$abb <- state_pops$state
 state_pops$state <- state_pops$state_name
 state_pops$state_name <- NULL
 
-### FINISH THE CODE HERE ###
-cv_states <- merge( cv_states_readin, state_pops, by="state")
+### FINISH THE CODE HERE
+cv_states <- merge(cv_states, state_pops, by=________)
 ```
 
 ### 2. Look at the data
@@ -90,7 +93,7 @@ str(cv_states)
 ### 3. Format the data
 
 - Make date into a date variable
-- Make `state` and `abb` into a factor variable
+- Make state into a factor variable
 - Order the data first by state, second by date
 - Confirm the variables are now correctly formatted
 - Inspect the range values for each variable. What is the date range? The range of cases and deaths?
@@ -99,17 +102,15 @@ str(cv_states)
 # format the date
 cv_states$date <- as.Date(cv_states$date, format="%Y-%m-%d")
 
-# format the state variable
+# format the state and state abbreviation (abb) variables
 state_list <- unique(cv_states$state)
 cv_states$state <- factor(cv_states$state, levels = state_list)
+abb_list <- unique(cv_states$abb)
+cv_states$abb <- factor(cv_states$abb, levels = abb_list)
 
-# format the state abbreviation (abb) variable
-### FINISH THE CODE HERE ###
-abb_list = unique(cv_states$abb)
-cv_states$abb = factor(cv_states$abb, levels = abb_list)
-  
+### FINISH THE CODE HERE 
 # order the data first by state, second by date
-cv_states = cv_states[order(cv_states$state, cv_states$date),]
+cv_states = cv_states[order(_________, _________),]
 
 # Confirm the variables are now correctly formatted
 str(cv_states)
@@ -126,13 +127,17 @@ max(cv_states$date)
 ### 4. Add `new_cases` and `new_deaths` and correct outliers
 
 - Add variables for new cases, `new_cases`, and new deaths, `new_deaths`: 
-  - Hint: `new_cases` is equal to the difference between cases on date i and date i-1, starting on date i=2
+  - Hint: You can set `new_cases` equal to the difference between cases on date i and date i-1, starting on date i=2
 
 - Use `plotly` for EDA: See if there are outliers or values that don't make sense for `new_cases` and `new_deaths`. Which states and which dates have strange values?
 
 - Correct outliers: Set negative values for `new_cases` or `new_deaths` to 0
 
-- Recalculate `cases` and `deaths` as cumulative sum of updates `new_cases` and `new_deaths`
+- Recalculate `cases` and `deaths` as cumulative sum of updated `new_cases` and `new_deaths`
+
+- Get the rolling average of new cases and new deaths to smooth over time
+
+- Inspect data again interactively
 
 ```{r}
 # Add variables for new_cases and new_deaths:
@@ -144,10 +149,10 @@ for (i in 1:length(state_list)) {
   cv_subset$new_cases = cv_subset$cases[1]
   cv_subset$new_deaths = cv_subset$deaths[1]
 
-  #### FINISH THE CODE HERE ###
+  ### FINISH THE CODE HERE
   for (j in 2:nrow(cv_subset)) {
-    cv_subset$new_cases[j] = cv_subset$cases[j] - cv_subset$cases[j-1] 
-    cv_subset$new_deaths[j] = cv_subset$deaths[j] - cv_subset$deaths[j-1]
+    cv_subset$new_cases[j] = __________ - __________
+    cv_subset$new_deaths[j] = __________ - __________
   }
 
   # include in main dataset
@@ -155,18 +160,16 @@ for (i in 1:length(state_list)) {
   cv_states$new_deaths[cv_states$state==state_list[i]] = cv_subset$new_deaths
 }
 
-# Inspect outliers in new_cases and new_deaths using plotly
-### FINISH THE CODE HERE ###
-p1<-ggplot(cv_states, 
-           aes( x=date, y=new_cases, color=state  )
-           ) + geom_line() + geom_point(size = .5, alpha = 0.5)
+# Focus on recent dates
+cv_states <- cv_states %>% dplyr::filter(date >= "2021-06-01")
+
+### FINISH THE CODE HERE
+# Inspect outliers in new_cases using plotly
+p1<-ggplot(cv_states, aes(x = date, y = new_cases, color = state)) + ________ + geom_point(size = .5, alpha = 0.5)
 ggplotly(p1)
 p1<-NULL # to clear from workspace
 
-### FINISH THE CODE HERE ###
-p2<-ggplot(cv_states, 
-           aes(x=date, y=new_deaths, color=state )
-           ) + geom_line() + geom_point(size = .5, alpha = 0.5)
+p2<-ggplot(cv_states, aes(x = date, y = new_deaths, color = state)) + ________ + geom_point(size = .5, alpha = 0.5)
 ggplotly(p2)
 p2<-NULL # to clear from workspace
 
@@ -174,7 +177,7 @@ p2<-NULL # to clear from workspace
 cv_states$new_cases[cv_states$new_cases<0] = 0
 cv_states$new_deaths[cv_states$new_deaths<0] = 0
 
-# Recalculate `cases` and `deaths` as cumulative sum of updates `new_cases` and `new_deaths`
+# Recalculate `cases` and `deaths` as cumulative sum of updated `new_cases` and `new_deaths`
 for (i in 1:length(state_list)) {
   cv_subset = subset(cv_states, state == state_list[i])
 
@@ -182,14 +185,25 @@ for (i in 1:length(state_list)) {
   cv_subset$cases = cv_subset$cases[1]
   cv_subset$deaths = cv_subset$deaths[1]
 
+  ### FINISH CODE HERE
   for (j in 2:nrow(cv_subset)) {
-    cv_subset$cases[j] = cv_subset$new_cases[j] + cv_subset$cases[j-1]
-    cv_subset$deaths[j] = cv_subset$new_deaths[j] + cv_subset$deaths[j-1]
+    cv_subset$cases[j] = cv_subset$new_cases[j] + cv_subset$_________
+    cv_subset$deaths[j] = cv_subset$new_deaths[j] + cv_subset$__________
   }
   # include in main dataset
   cv_states$cases[cv_states$state==state_list[i]] = cv_subset$cases
   cv_states$deaths[cv_states$state==state_list[i]] = cv_subset$deaths
 }
+
+# Smooth new counts
+cv_states$new_cases = zoo::rollmean(cv_states$new_cases, k=7, fill=NA, align='right') %>% round(digits = 0)
+cv_states$new_deaths = zoo::rollmean(cv_states$new_deaths, k=7, fill=NA, align='right') %>% round(digits = 0)
+
+# Inspect data again interactively
+p2<-ggplot(cv_states, aes(x = date, y = new_deaths, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
+ggplotly(p2)
+#p2=NULL
+
 ```
 
 ### 5. Add additional variables
@@ -206,27 +220,27 @@ for (i in 1:length(state_list)) {
 
 ```{r}
 
+### FINISH CODE HERE
 # add population normalized (by 100,000) counts for each variable
-cv_states$per100k =  as.numeric(format(round(cv_states$cases/(cv_states$population/100000),1),nsmall=1))
-cv_states$newper100k =  as.numeric(format(round(cv_states$new_cases/(cv_states$population/100000),1),nsmall=1))
-cv_states$deathsper100k =  as.numeric(format(round(cv_states$deaths/(cv_states$population/100000),1),nsmall=1))
-cv_states$newdeathsper100k =  as.numeric(format(round(cv_states$new_deaths/(cv_states$population/100000),1),nsmall=1))
+cv_states$per100k =  as.numeric(format(round(cv_states$cases/(cv_states$________/100000),1),nsmall=1))
+cv_states$newper100k =  as.numeric(format(round(cv_states$new_cases/(cv_states$________/100000),1),nsmall=1))
+cv_states$deathsper100k =  as.numeric(format(round(cv_states$deaths/(cv_states$________/100000),1),nsmall=1))
+cv_states$newdeathsper100k =  as.numeric(format(round(cv_states$new_deaths/(cv_states$________/100000),1),nsmall=1))
 
 # add a naive_CFR variable = deaths / cases
 cv_states = cv_states %>% mutate(naive_CFR = round((deaths*100/cases),2))
 
 # create a `cv_states_today` variable
-### FINISH THE CODE HERE ###
-max_date <- max(cv_states$date)
-cv_states_today = cv_states %>% filter(date==as.Date(max_date))
+cv_states_today = subset(cv_states, date==max(cv_states$date))
 
 ```
 
-## II. Interactive plots
+## II. Scatterplots
 
 ### 6. Explore scatterplots using `plot_ly()`
 
 - Create a scatterplot using `plot_ly()` representing `pop_density` vs. various variables (e.g. `cases`, `per100k`, `deaths`, `deathsper100k`) for each state on most recent date (`cv_states_today`)
+  - Color points by state and size points by state population
   - Use hover to identify any outliers. 
   - Remove those outliers and replot.
 - Choose one plot. For this plot:
@@ -236,36 +250,37 @@ cv_states_today = cv_states %>% filter(date==as.Date(max_date))
 
 ```{r}
 
+### FINISH CODE HERE
+
 # pop_density vs. cases
-### FINISH THE CODE HERE ###
 cv_states_today %>% 
   plot_ly(x = ~pop_density, y = ~cases, 
-          type = 'scatter', mode = 'markers', color = ~state,
+          type = _______, mode = 'markers', color = ~______,
           size = ~population, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5))
 
 # filter out "District of Columbia"
-cv_states_today_scatter <- cv_states_today %>% filter(state!="District of Columbia")
+cv_states_today_filter <- cv_states_today %>% filter(state!="District of Columbia")
 
 # pop_density vs. cases after filtering
-cv_states_today_scatter %>% 
+cv_states_today_filter %>% 
   plot_ly(x = ~pop_density, y = ~cases, 
-          type = 'scatter', mode = 'markers', color = ~state,
+          type = _______, mode = 'markers', color = ~_______,
           size = ~population, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5))
 
 # pop_density vs. deathsper100k
-cv_states_today_scatter %>% 
-  plot_ly(x = ~pop_density, y = ~newdeathsper100k, 
-          type = 'scatter', mode = 'markers', color = ~state,
+cv_states_today_filter %>% 
+  plot_ly(x = ~pop_density, y = ~deathsper100k,
+          type = _______, mode = 'markers', color = ~_______,
           size = ~population, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5))
 
 # Adding hoverinfo
-cv_states_today_scatter %>% 
+cv_states_today_filter %>% 
   plot_ly(x = ~pop_density, y = ~deathsper100k,
-          type = 'scatter', mode = 'markers', color = ~state,
+          type = _______, mode = 'markers', color = ~_______,
           size = ~population, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5),
           hoverinfo = 'text',
-          text = ~paste( paste(state, ":", sep=""), paste(" Cases per 100k: ", per100k, sep="") , paste(" Deaths per 100k: ",
-                        deathsper100k, sep=""), sep = "<br>")) %>%
+          text = ~paste( paste(state, ":", sep=""), paste(" Cases per 100k: ", per100k, sep="") , 
+                         paste(" Deaths per 100k: ", _______, sep=""), sep = "<br>")) %>%
   layout(title = "Population-normalized COVID-19 deaths (per 100k) vs. population density for US states",
                   yaxis = list(title = "Deaths per 100k"), xaxis = list(title = "Population Density"),
          hovermode = "compare")
@@ -274,13 +289,12 @@ cv_states_today_scatter %>%
 ### 7. Explore scatterplot trend interactively using `ggplotly()` and `geom_smooth()`
 
 - For `pop_density` vs. `newdeathsper100k` create a chart with the same variables using `gglot_ly()`
-  - What's the `geom_*()` we need here?
 - Explore the pattern between $x$ and $y$ using `geom_smooth()`
   - Explain what you see. Do you think `pop_density` is a correlate of `newdeathsper100k`?
 
 ```{r}
-### FINISH THE CODE HERE ###
-p <- ggplot(cv_states_today_scatter, aes(x=pop_density, y=per100k, color=state, size=population)) + geom_point() + geom_smooth() 
+### FINISH CODE HERE
+p <- ggplot(cv_states_today_scatter, aes(x=pop_density, y=deathsper100k, size=population)) + geom_point() + _______
 ggplotly(p)
 ```
 
@@ -288,38 +302,39 @@ ggplotly(p)
 ### 8. Multiple line chart
 
 - Create a line chart of the `naive_CFR` for all states over time using `plot_ly()`
-  - Use hoverinfo to identify states that had a "first peak"
-  - Use the zoom and pan tools to inspect the `naive_CFR` for the states that had a "first peak" in September. How have they changed over time?
-
-- Create one more line chart, for Texas only, which shows `new_cases` and `new_deaths` together in one plot. Hint: use `add_lines()`
+  - Use the zoom and pan tools to inspect the `naive_CFR` for the states that had an increase in September. How have they changed over time?
+- Create one more line chart, for Florida only, which shows `new_cases` and `new_deaths` together in one plot. Hint: use `add_layer()`
   - Use hoverinfo to "eyeball" the approximate peak of deaths and peak of cases. What is the time delay between the peak of cases and the peak of deaths?
+  
 
 ```{r}
 
+### FINISH CODE HERE
 # Line chart for naive_CFR for all states over time using `plot_ly()`
-plot_ly(cv_states, x = ~date, y = ~naive_CFR, color = ~state, type = "scatter", mode = "lines")
+plot_ly(cv_states, x = ~date, y = ~_______, color = ~state, type = "scatter", mode = "lines")
 
-# Line chart for Texas showing new_cases and new_deaths together
-### FINISH THE CODE HERE ###
-cv_states %>% filter(state=="Texas") %>% plot_ly(x = ~date, y = ~new_cases, type = "scatter", mode = "lines") %>% add_lines(x = ~date, y = ~new_deaths, type = "scatter", mode = "lines")
+### FINISH CODE HERE
+# Line chart for Florida showing new_cases and new_deaths together
+cv_states %>% filter(state=="Florida") %>% plot_ly(x = ~date, y = ~new_cases, type = "scatter", mode = "lines") %>% _______(x = ~date, y = ~new_deaths, type = "scatter", mode = "lines") 
 
 ```
 
 
 ### 9. Heatmaps
 
-Create a heatmap to visualize `new_cases` for each state on each date greater than April 1st, 2020
+Create a heatmap to visualize `new_cases` for each state on each date greater than June 1st, 2021
 - Start by mapping selected features in the dataframe into a matrix using the **tidyr** package function `pivot_wider()`, naming the rows and columns, as done in the lecture notes
-- Use `plot_ly()` to create a heatmap out of this matrix
-
+- Use `plot_ly()` to create a heatmap out of this matrix. Which states stand out?
+- Repeat with `newper100k` variable. Now which states stand out? 
 - Create a second heatmap in which the pattern of `new_cases` for each state over time becomes more clear by filtering to only look at dates every two weeks 
 
 ```{r}
 
+### FINISH CODE HERE
 # Map state, date, and new_cases to a matrix
 library(tidyr)
-cv_states_mat <- cv_states %>% select(state, date, new_cases) %>% filter(date>as.Date("2020-04-01"))
-cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = new_cases))
+cv_states_mat <- cv_states %>% select(state, date, new_cases) %>% dplyr::filter(date>as.Date("2021-06-15"))
+cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = ________))
 rownames(cv_states_mat2) <- cv_states_mat2$date
 cv_states_mat2$date <- NULL
 cv_states_mat2 <- as.matrix(cv_states_mat2)
@@ -330,13 +345,23 @@ plot_ly(x=colnames(cv_states_mat2), y=rownames(cv_states_mat2),
              type="heatmap",
              showscale=T)
 
+# Repeat with newper100k
+cv_states_mat <- cv_states %>% select(state, date, newper100k) %>% dplyr::filter(date>as.Date("2021-06-15"))
+cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = ________))
+rownames(cv_states_mat2) <- cv_states_mat2$date
+cv_states_mat2$date <- NULL
+cv_states_mat2 <- as.matrix(cv_states_mat2)
+
+plot_ly(x=colnames(cv_states_mat2), y=rownames(cv_states_mat2),
+             z=~cv_states_mat2,
+             type="heatmap",
+             showscale=T)
+
 # Create a second heatmap after filtering to only include dates every other week
-filter_dates <- seq(as.Date("2020-04-01"), as.Date("2020-10-01"), by="2 weeks")
+filter_dates <- seq(as.Date("2021-06-15"), as.Date("2021-11-01"), by=________)
 
-### FINISH THE CODE HERE ### 
-cv_states_mat <- cv_states %>% select(state, date, new_cases) %>% filter( date %in% filter_dates )
-
-cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = new_cases))
+cv_states_mat <- cv_states %>% select(state, date, newper100k) %>% filter(date %in% filter_dates)
+cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = ________))
 rownames(cv_states_mat2) <- cv_states_mat2$date
 cv_states_mat2$date <- NULL
 cv_states_mat2 <- as.matrix(cv_states_mat2)
@@ -350,23 +375,25 @@ plot_ly(x=colnames(cv_states_mat2), y=rownames(cv_states_mat2),
 
 ### 10. Map
 
-- Create a map to visualize the `naive_CFR` by state on May 1st, 2020
+- Create a map to visualize the `naive_CFR` by state on October 15, 2021
 - Compare with a map visualizing the `naive_CFR` by state on most recent date
-- Plot the two maps side by side using `subplot()`. Make sure the shading is for the same range of values (google is your friend for this)
+- Plot the two maps together using `subplot()`. Make sure the shading is for the same range of values (google is your friend for this)
 - Describe the difference in the pattern of the CFR.
 
 ```{r}
 
-### For May 1 2020
+### For specified date
+
+pick.date = "2021-10-15"
 
 # Extract the data for each state by its abbreviation
-cv_CFR <- cv_states %>% filter(date=="2020-05-01") %>% select(state, abb, naive_CFR, cases, deaths) # select data
-cv_CFR$state_name <- cv_CFR$state
-cv_CFR$state <- cv_CFR$abb
-cv_CFR$abb <- NULL
+cv_per100 <- cv_states %>% filter(date==pick.date) %>% select(state, abb, newper100k, cases, deaths) # select data
+cv_per100$state_name <- cv_per100$state
+cv_per100$state <- cv_per100$abb
+cv_per100$abb <- NULL
 
 # Create hover text
-cv_CFR$hover <- with(cv_CFR, paste(state_name, '<br>', "CFR: ", naive_CFR, '<br>', "Cases: ", cases, '<br>', "Deaths: ", deaths))
+cv_per100$hover <- with(cv_per100, paste(state_name, '<br>', "Cases per 100k: ", newper100k, '<br>', "Cases: ", cases, '<br>', "Deaths: ", deaths))
 
 # Set up mapping details
 set_map_details <- list(
@@ -377,32 +404,32 @@ set_map_details <- list(
 )
 
 # Make sure both maps are on the same color scale
-shadeLimit <- 9
+shadeLimit <- 125
 
 # Create the map
-fig <- plot_geo(cv_CFR, locationmode = 'USA-states') %>% 
+fig <- plot_geo(cv_per100, locationmode = 'USA-states') %>% 
   add_trace(
-    z = ~naive_CFR, text = ~hover, locations = ~state,
-    color = ~naive_CFR, colors = 'Purples'
+    z = ~newper100k, text = ~hover, locations = ~state,
+    color = ~newper100k, colors = 'Purples'
   )
-fig <- fig %>% colorbar(title = "CFR May 1 2020", limits = c(0,shadeLimit))
+fig <- fig %>% colorbar(title = paste0("Cases per 100k: ", pick.date), limits = c(0,shadeLimit))
 fig <- fig %>% layout(
-    title = paste('CFR by State as of', Sys.Date(), '<br>(Hover for value)'),
+    title = paste('Cases per 100k by State as of ', pick.date, '<br>(Hover for value)'),
     geo = set_map_details
   )
-fig_May1 <- fig
+fig_pick.date <- fig
 
 #############
 ### For Today
 
 # Extract the data for each state by its abbreviation
-cv_CFR <- cv_states_today %>%  select(state, abb, naive_CFR, cases, deaths) # select data
-cv_CFR$state_name <- cv_CFR$state
-cv_CFR$state <- cv_CFR$abb
-cv_CFR$abb <- NULL
+cv_per100 <- cv_states_today %>%  select(state, abb, newper100k, cases, deaths) # select data
+cv_per100$state_name <- cv_per100$state
+cv_per100$state <- cv_per100$abb
+cv_per100$abb <- NULL
 
 # Create hover text
-cv_CFR$hover <- with(cv_CFR, paste(state_name, '<br>', "CFR: ", naive_CFR, '<br>', "Cases: ", cases, '<br>', "Deaths: ", deaths))
+cv_per100$hover <- with(cv_per100, paste(state_name, '<br>', "Cases per 100k: ", newper100k, '<br>', "Cases: ", cases, '<br>', "Deaths: ", deaths))
 
 # Set up mapping details
 set_map_details <- list(
@@ -413,25 +440,22 @@ set_map_details <- list(
 )
 
 # Create the map
-fig <- plot_geo(cv_CFR, locationmode = 'USA-states') %>% 
+fig <- plot_geo(cv_per100, locationmode = 'USA-states') %>% 
   add_trace(
-    z = ~naive_CFR, text = ~hover, locations = ~state,
-    color = ~naive_CFR, colors = 'Purples'
+    z = ~newper100k, text = ~hover, locations = ~state,
+    color = ~newper100k, colors = 'Purples'
   )
-fig <- fig %>% colorbar(title = "CFR May 1 2020", limits = c(0,shadeLimit))
+fig <- fig %>% colorbar(title = paste0("Cases per 100k: ", Sys.Date()), limits = c(0,shadeLimit))
 fig <- fig %>% layout(
-    title = paste('CFR by State as of', Sys.Date(), '<br>(Hover for value)'),
+    title = paste('Cases per 100k by State as of', Sys.Date(), '<br>(Hover for value)'),
     geo = set_map_details
   )
 fig_Today <- fig
 
 
-### Plot side by side 
-### FINISH THE CODE HERE ###
-subplot( fig_May1, fig_Today )
+### Plot together 
+________(fig_pick.date, fig_Today, nrows = 2, margin = .05)
 
 ```
-
-
 
 
